<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- Imagen decorativa, excluida de accesibilidad -->
    <ImageView
        android:id="@+id/header_background_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_xxs"
        android:contentDescription="@null"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        android:src="@drawable/img_header_screen_main"
        app:layout_constraintDimensionRatio="3:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/settings_icon"
        android:layout_width="@dimen/icon_size_l"
        android:layout_height="@dimen/icon_size_l"
        android:layout_marginStart="@dimen/spacing_s"
        android:layout_marginTop="@dimen/spacing_m"
        android:contentDescription="@string/desc_icon_settings"
        android:src="@drawable/ic_settings_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/user_icon"
        android:layout_width="@dimen/icon_size_l"
        android:layout_height="@dimen/icon_size_l"
        android:layout_marginTop="@dimen/spacing_m"
        android:layout_marginEnd="@dimen/spacing_s"
        android:contentDescription="@string/desc_icon_user"
        android:src="@drawable/ic_user_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_xs"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/user_title"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_l"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/user_icon"
        app:layout_constraintEnd_toStartOf="@+id/user_icon"
        app:layout_constraintTop_toTopOf="@+id/user_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>
