<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fondo_principal_beige"
        tools:context=".ui.admin.AdministradorActivity">

        <ImageView
            android:id="@+id/header_background_image"
            android:layout_width="0dp"
            android:layout_height="@dimen/header_height"
            android:layout_marginTop="@dimen/spacing_xxs"
            android:contentDescription="@string/desc_header_background"
            android:scaleType="centerCrop"
            android:src="@drawable/img_header_screen_main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/settings_icon"
            android:layout_width="@dimen/icon_size_l"
            android:layout_height="@dimen/icon_size_l"
            android:layout_marginStart="@dimen/spacing_s"
            android:layout_marginTop="@dimen/spacing_m"
            android:contentDescription="@string/desc_icon_settings"
            android:src="@drawable/ic_settings_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/user_icon"
            android:layout_width="@dimen/icon_size_l"
            android:layout_height="@dimen/icon_size_l"
            android:layout_marginTop="@dimen/spacing_m"
            android:layout_marginEnd="@dimen/spacing_s"
            android:contentDescription="@string/desc_icon_user"
            android:src="@drawable/ic_user_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/user_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_xs"
            android:text="@string/user_title"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_l"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/user_icon"
            app:layout_constraintEnd_toStartOf="@+id/user_icon"
            app:layout_constraintTop_toTopOf="@+id/user_icon" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/spacing_m"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_background_image">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_m">

                <LinearLayout
                    android:id="@+id/card_lectura_voz"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/txt_rounded_corner_green"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/spacing_s"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/text_lectura_voz"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat"
                        android:paddingStart="@dimen/spacing_m"
                        android:paddingEnd="@dimen/spacing_s"
                        android:text="@string/activar_lectura_de_voz"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_m" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switchLectura"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/spacing_s"
                        android:checked="false"
                        app:thumbTint="@color/white"
                        app:trackTint="@color/turquesa_apagado" />
                </LinearLayout>

                <include
                    android:id="@+id/card_mq4"
                    layout="@layout/include_card_sensor_user"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_m"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/card_lectura_voz" />

                <include
                    android:id="@+id/card_temperatura"
                    layout="@layout/include_card_sensor_user"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_m"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/card_mq4" />

                <include
                    android:id="@+id/card_presion"
                    layout="@layout/include_card_sensor_user"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_m"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/card_temperatura" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.drawerlayout.widget.DrawerLayout>